<resources>
    <string name="app_name">Narrate</string>
    <string name="setup_1">write your life story</string>
    <string name="setup_2">capture memories</string>
    <string name="setup_3">discover yourself</string>
    <string name="setup_4">narrate your life</string>
    <string name="setup_subtitle_1">Keep a daily journal.</string>
    <string name="setup_subtitle_2">Collect your thoughts and photos.</string>
    <string name="setup_subtitle_3">Write about your personal growth.</string>
    <string name="setup_journal">Narrate Your Life</string>
    <string name="sign_in">SIGN IN</string>
    <string name="signing_in">Signing in...</string>
    <string name="start">Start</string>
    <string name="integrate_day_one">Integrate with Day One</string>
    <string name="reauthenticate_dropbox">Reauthenticate Dropbox</string>
    <string name="reauthenticate_dropbox_desc">Only use this option if you are receiving errors while syncing with Dropbox.</string>
    <string name="filter_sort">Filter \u0026 Sort</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="search">Search</string>
    <string name="selected_count">%1$s selected</string>
    <string name="sort_alphabet">Alphabetically</string>
    <string name="sort_alphabet_reversed">Alphabetically (reversed)</string>
    <string name="sort_newest">Newest first</string>
    <string name="sort_oldest">Oldest first</string>
    <string name="google_plus">Google+ Community</string>
    <string name="title_activity_settings">Settings</string>
    <string name="narrate_pro">Narrate Pro</string>
    <string name="upgrade">Upgrade</string>
    <string name="upgrade_summary">Upgrade to Narrate Pro for more features\u0021</string>
    <string name="developer">Developer</string>
    <string name="developer_options">Developer Options</string>
    <string name="logging_enabled">Enable logging</string>
    <string name="logging_summary">Output logs to text file on sd card for debugging purposes.</string>
    <string name="disable_prefs">Disable developer options</string>
    <string name="disable_prefs_summary">Removes developer options and turns of all features.</string>
    <string name="version">Version</string>
    <string name="narrate_pro_description">Narrate Pro is a premium upgrade that offers the following features:\n\n\t\u2022\tSync to Dropbox\n\t\u2022\tSync to Google Drive\n\t\u2022\tSync with Day One (uses Dropbox)\n\t\u2022\tLocal data backup\n\t\u2022\tAdd multiple reminders\n\t\u2022\tEarly access to beta versions\n\nNarrate Pro is going to continue to receive more premium features!</string>
    <string name="dialog_title">Choose Sync Folder</string>
    <string name="default_folder"><![CDATA[ Default <font color=\'#B0B0B0\'>/apps/Narrate/</font> ]]></string>
    <string name="day_one_folder"><![CDATA[ Day One <font color=\'#B0B0B0\'>/apps/Day One/journal.dayone</font> ]]></string>
    <string name="custom_folder_hint">/path/to/folder</string>
    <string name="multiple_sync_services_warning">Enabling multiple sync services is not recommended. It has not been extensively tested and may result in data loss. Are you sure you want to continue?</string>
    <string name="sync_data_network">Data Network</string>
    <string name="sync_data_network_descrip">Sync data when not on WiFi.</string>
    <string name="beta_versions">Request Beta Versions</string>
    <string name="beta_versions_summary">Try out exciting new features before they are released to everyone else!</string>
    <string name="sync_interval">Set automatic sync interval</string>
    <string name="sync_status">Sync Status</string>
    <string name="last_sync">Last Sync:</string>
    <string name="cancel_sync">Cancel sync</string>
    <string name="currently_syncing">Currently syncing</string>
    <string name="local_backup">Local Backup</string>
    <string name="tap_to_restore">Tap to restore</string>
    <string name="thanks_for_upgrading">Thanks for upgrading to Narrate Pro!</string>
    <string name="in_app_upgrade_error">Error completing purchase. Please contact support@datonicgroup.com.</string>
    <string name="get_free">Get it for free</string>
    <string name="referrals">Referrals</string>
    <string name="refer_description">Share your referral link with your friends. When you refer three new people to download Narrate, you will get Narrate Pro for free! Try sharing your link on social media!</string>
    <string name="copy_link">copy link</string>
    <string name="referral_link_social_media_text">Narrate is a material design journal for Android. #NarrateYourLife Download here: %s</string>
    <string name="referral_thanks">Thanks for referring your friends to download Narrate. You now have Narrate Pro for free. Enjoy!</string>
    <string name="title_activity_reminders">Reminders</string>
    <string name="reminders">Reminders</string>
    <string name="no_reminders">No Reminders Found</string>
    <string name="description">Description</string>
    <string name="error_date">You must set a date.</string>
    <string name="error_time">You must set a time.</string>
    <string name="error_description">You must set a description.</string>
    <string name="error_historical">A reminder must be in the future</string>
    <string name="at">\u0020at\u0020</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="today_occurrence">Today at\u0020</string>
    <string name="tomorrow_occurrence">Tomorrow at\u0020</string>
    <string name="daily_occurrence">Every Day at\u0020</string>
    <string name="weekly_occurrence">Every\u0020</string>
    <string name="monthly_occurrence">\u0020Day of Every Month</string>
    <string name="yearly_occurrence">\u0020Every Year</string>
    <string name="reminders_pro_upgrade">Upgrade to Narrate Pro for multiple reminders!</string>
    <string name="select_location">Select Location</string>
    <string name="show_nearby_places">Show Nearby Places</string>
    <string name="name_this_location">Name This Location</string>
    <string name="remove_location">Remove Location</string>
    <string name="custom_location">Custom Location</string>
    <string name="nearby_places">Nearby Places</string>
    <string name="add_tag">Add tag...</string>
    <string name="view_photo">View Photo</string>
    <string name="error_location">Error retrieving location</string>
    <string name="select_gallery">Select from Gallery</string>
    <string name="take_photo">Take Photo</string>
    <string name="remove_photo">Remove Photo</string>
    <string name="no_entries">No Entries</string>
    <string name="no_photos">No photos</string>
    <string name="new_update_available">A new update is available for download in the Google Play store.</string>
    <string name="new_update_available_forced">A critical update is available for download in the Google Play store. Please update immediately.</string>
    <string name="review_body">If you enjoy using Narrate, would you mind leaving us a review on the Google Play Store? It won\'t take more than a minute and it will help us out a TON!</string>
    <string name="made_in_detroit">Made in Detroit</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="play_store">Play Store</string>
    <string name="okay">Okay</string>
    <string name="data_resyncing">Syncing</string>
    <string name="edit_u">EDIT</string>
    <string name="play_store_uc">PLAY STORE</string>
    <string name="no_thanks_uc">NO THANKS</string>
    <string name="review_t">Feedback</string>
    <string name="add_uc">ADD</string>
    <string name="legal_notices">Legal Notices</string>
    <string name="OK">OK</string>
    <string name="not_set">not set</string>
    <string name="to">to</string>
    <string name="end">End</string>
    <string name="restore">restore</string>
    <string name="view">view</string>
    <string name="bookmarked">Bookmarked</string>
    <string name="sync_data">Sync data</string>
    <string name="sync">Sync</string>
    <string name="links">Links</string>
    <string name="go">go</string>
    <string name="warning">Warning</string>
    <string name="other">Other</string>
    <string name="upgrade_uc">UPGRADE</string>
    <string name="cancel_uc">CANCEL</string>
    <string name="custom_folder">Custom</string>
    <string name="continue_uc">CONTINUE</string>
    <string name="minute">minute</string>
    <string name="minutes">Minutes</string>
    <string name="hour">Hour</string>
    <string name="hours">Hours</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="save_uc">SAVE</string>
    <string name="time">Time</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="tags">Tags</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="none">None</string>
    <string name="text">Text</string>
    <string name="edited">Edited</string>
    <string name="photo">Photo</string>
    <string name="delete_uc">DELETE</string>
    <string name="delete_title">Delete</string>
    <string name="delete_description">Are you sure you want to delete this?</string>
    <string name="set">set</string>
    <string name="seconds">seconds</string>
    <string name="disable">disable</string>
    <string name="get_started">Get Started</string>
    <string name="share">share</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="congratulations">Congratulations</string>
    <string name="upgrading">Upgrading&#8230;</string>
    <string name="list_view">List View</string>
    <string name="grid_view">Grid View</string>
    <string name="days">Days</string>
    <string name="entries">Entries</string>
    <string name="places">Places</string>
    <string name="write_in_journal">Write in your journal</string>
    <string name="email_support">Email support</string>
    <string name="reserved_for_narrate_pro">Please upgrade to Narrate Pro to use this feature.</string>
    <string name="general">General</string>
    <string name="general_save_sort_filter">Save sort/filter between sessions</string>
    <string name="general_save_photos">Save photos to camera roll</string>
    <string name="general_auto_location">Automatically add current location to new entries</string>
    <string name="general_twentyfour_hour_format">Enable 24 hour time format</string>
    <string name="restore_deleted_entries">Restore deleted entries</string>
    <string name="toggle_sections">Toggle Sections</string>
    <string name="toggle_entries">Enable list section</string>
    <string name="toggle_photos">Enable photos section</string>
    <string name="toggle_calendar">Enable calendar section</string>
    <string name="toggle_places">Enable places section</string>
    <string name="toggle_sections_min_error">At least one section must be enabled!</string>
    <string name="reminders_add_new">Add a new reminder</string>
    <string name="reminders_view_existing">View reminders</string>
    <string name="dropbox_sync_folder">Set Dropbox sync folder</string>
    <string name="use_dropbox">Enable Dropbox sync</string>
    <string name="google_drive_title">Enable Google Drive sync</string>
    <string name="passcode_lock_title">Passcode Lock</string>
    <string name="passcode_set">Set passcode</string>
    <string name="passcode_confirm">Confirm passcode</string>
    <string name="passcode_existing">Enter existing passcode</string>
    <string name="passcode_set_lock_time">Set lock time</string>
    <string name="passcode_manage">Manage Passcode</string>
    <string name="passcode_enter_passcode">Enter Your Passcode</string>
    <string name="passcode_enter_old_passcode">Enter Your Old Passcode</string>
</resources>