<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (C) 2014 Freddie (Musenkishi) Lust-Hed
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbars="vertical">

    <TextView
        android:id="@+id/filter_title"
        style="@style/Material.Header.SubHeader"
        android:text="@string/filter"
        android:textColor="@color/Filter_Section_Title" />

    <CheckBox
        android:id="@+id/filter_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/photo" />

    <CheckBox
        android:id="@+id/filter_bookmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bookmarked"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/filter_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date" />

        <LinearLayout
            android:id="@+id/filter_date_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/filter_date"
            android:orientation="horizontal"
            android:layout_centerVertical="true">

            <TextView
                android:id="@+id/filter_date_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/default_selector"
                android:clickable="true"
                android:paddingBottom="2dp"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:paddingTop="2dp"
                android:text="@string/start"
                android:textColor="@color/secondary_text"
                android:textSize="17dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:textColor="@color/secondary_text"
                android:textSize="17dp"
                android:layout_gravity="center_vertical" />

            <TextView
                android:id="@+id/filter_date_end"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/default_selector"
                android:paddingBottom="2dp"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:paddingTop="2dp"
                android:text="@string/end"
                android:textColor="@color/secondary_text"
                android:textSize="17dp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/filter_tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tags" />

        <TextView
            android:id="@+id/filter_tags_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/default_selector"
            android:clickable="true"
            android:paddingBottom="2dp"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:paddingTop="2dp"
            android:textColor="@color/secondary_text"
            android:textSize="17dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/sort_title"
        style="@style/Material.Header.SubHeader"
        android:text="@string/sort"
        android:textColor="@color/Filter_Section_Title" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/sort_alphabet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkMark="?android:attr/listChoiceIndicatorSingle"
            android:gravity="center_vertical"
            android:text="@string/sort_alphabet" />

        <RadioButton
            android:id="@+id/sort_alphabet_reverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkMark="?android:attr/listChoiceIndicatorSingle"
            android:gravity="center_vertical"
            android:text="@string/sort_alphabet_reversed" />

        <RadioButton
            android:id="@+id/sort_newest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkMark="?android:attr/listChoiceIndicatorSingle"
            android:gravity="center_vertical"
            android:text="@string/sort_newest" />

        <RadioButton
            android:id="@+id/sort_oldest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkMark="?android:attr/listChoiceIndicatorSingle"
            android:gravity="center_vertical"
            android:text="@string/sort_oldest" />
    </RadioGroup>

</LinearLayout>