<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/daily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="6dp"
            android:gravity="center_vertical"
            android:text="@string/daily" />

        <RadioButton
            android:id="@+id/weekly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="6dp"
            android:gravity="center_vertical"
            android:text="@string/weekly" />

        <RadioButton
            android:id="@+id/monthly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="6dp"
            android:gravity="center_vertical"
            android:text="@string/monthly" />
    </RadioGroup>

</LinearLayout>