<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="24dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/narrate_pro"
            android:textColor="#4D4D4E"
            android:textStyle="bold"
            android:textSize="26sp" />

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_launcher"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginTop="24dp"
            android:text="@string/narrate_pro_description"
            android:textColor="#666666" />

        <TextView
            android:id="@+id/upgrade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/description"
            android:layout_marginTop="24dp"
            android:background="@drawable/transparent_selector_background"
            android:clickable="true"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="@string/upgrade_uc"
            android:textColor="#4B93CF"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/upgrade"
            android:layout_toLeftOf="@id/upgrade"
            android:background="@drawable/transparent_selector_background"
            android:clickable="true"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="@string/cancel_uc"
            android:textColor="#4D4D4E"
            android:textStyle="bold" />

    </RelativeLayout>

</ScrollView>