<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="12dp"
    android:paddingBottom="12dp">

    <LinearLayout
        android:id="@+id/view_photo"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="@dimen/twelve_dp"
        android:paddingBottom="@dimen/twelve_dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/transparent_selector_background"
        android:clickable="true"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/entry_photo_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/view_photo"
            android:layout_marginLeft="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/select_gallery"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="@dimen/twelve_dp"
        android:paddingBottom="@dimen/twelve_dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/transparent_selector_background"
        android:clickable="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/select_from_gallery"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/select_gallery"
            android:layout_marginLeft="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/take_photo"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="@dimen/twelve_dp"
        android:paddingBottom="@dimen/twelve_dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/transparent_selector_background"
        android:clickable="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/take_photo_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/take_photo"
            android:layout_marginLeft="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/remove_photo"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="@dimen/twelve_dp"
        android:paddingBottom="@dimen/twelve_dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/transparent_selector_background"
        android:clickable="true"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_menu_delete"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/remove_photo"
            android:layout_marginLeft="20dp"/>

    </LinearLayout>

</LinearLayout>