<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginTop="16dp"
        android:imeOptions="actionDone"
        android:inputType="textCapSentences|textShortMessage|textAutoCorrect|textMultiLine"
        android:hint="@string/description"
        android:maxLength="75" />

    <Spinner
        android:id="@+id/recurrence"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/description" />

    <LinearLayout
        android:id="@+id/when"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recurrence"
        android:orientation="horizontal"
        android:weightSum="2">

        <RelativeLayout
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/default_selector"
            android:clickable="true">

            <TextView
                android:id="@+id/date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textColor="@color/primary_text"
                android:textSize="16dp"
                android:hint="@string/date" />

            <com.datonicgroup.narrate.app.ui.views.ColorFilterImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_arrow_down_pressed"
                app:colorFilter="#868686"
                android:layout_margin="8dp" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/default_selector"
            android:clickable="true">

            <TextView
                android:id="@+id/time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textColor="@color/primary_text"
                android:textSize="16dp"
                android:hint="@string/time" />

            <com.datonicgroup.narrate.app.ui.views.ColorFilterImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_arrow_down_pressed"
                app:colorFilter="#868686"
                android:layout_margin="8dp"/>


        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>